--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <div style="">
 <h1>welcome to</h1>
 <h2>橘猫电子商务有限公司</h2>
+<h3>商务合作-VX:Y9999_- 何总 </h3>
+<h3>广告业务-VX:QQ2794628618 -小曾</h3>
 </div>	
 </body>
 </html>
